.vscode/allianceuat_compare/force-app/main/default/objects/Shiftmatch_Skill__c/Shiftmatch_Skill__c.object-meta.xml
<CustomObject>
    <label>Shiftmatch Skill</label>
    <nameField>
        <label>Shiftmatch PKID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shiftmatch Skills</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>