.vscode/allianceuat_compare/force-app/main/default/objects/Shiftmatch_Skill__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Shiftmatch Skills</relationshipLabel>
    <relationshipName>Shiftmatch_Skills</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>