.vscode/allianceuat_compare/force-app/main/default/objects/Shiftmatch_Skill__c/fields/Competency__c.field-meta.xml
<CustomField>
    <fullName>Competency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Competency</label>
    <referenceTo>sirenum__TicketType__c</referenceTo>
    <relationshipLabel>Shiftmatch Skills</relationshipLabel>
    <relationshipName>Shiftmatch_Skills</relationshipName>
    <type>Lookup</type>
</CustomField>