.vscode/allianceuat_compare/force-app/main/default/objects/Shiftmatch_Skill__c/fields/Ignore_Skill__c.field-meta.xml
<CustomField>
    <fullName>Ignore_Skill__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ignore Skill</label>
    <type>Checkbox</type>
</CustomField>