.vscode/allianceuat_compare/force-app/main/default/objects/Shiftmatch_Skill__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mandatory</fullName>
                <default>true</default>
                <label>Mandatory</label>
            </value>
            <value>
                <fullName>Mandatory Induction</fullName>
            </value>
            <value>
                <fullName>Optional</fullName>
            </value>
            <value>
                <fullName>Ignore Skill</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>